# rust-examples

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml  rust.yml
example_crypto/: Cargo.toml  README.md
example_crypto/benches/: iters.rs  keygen.rs  rand.rs  secp384r1.rs  sign.rs
example_crypto/examples/: client_ca.rs  client_ca_p12.rs  openssl_sequoia.rs
example_crypto/src/: lib.rs  openssl.rs  rng.rs
example_crypto/src/openssl/: benches.rs  client_ca.rs  keygen.rs  sign.rs
example_crypto/src/rng/: rand_crate.rs  rand_openssl.rs  rand_sys.rs  tests.rs
example_parsing/: Cargo.toml  README.md
example_parsing/src/: semver.rs
example_parsing/src/parsing/: semver.rs
example_parsing/src/parsing/semver/: tests.rs
example_parsing/src/semver/: tests.rs
example_syntax_highlight/: Cargo.toml
example_syntax_highlight/examples/: syntax_highlight_basic.rs
example_syntax_highlight/src/: lib.rs
example_vfs/: Cargo.toml  README.md
example_vfs/examples/: basic.rs
example_watchexec/: Cargo.toml
example_watchexec/examples/: watchexec_async.rs
example_watchexec/src/: lib.rs
examples_common/: Cargo.toml
examples_common/examples/: example_logging.rs
examples_common/src/: lib.rs  logging.rs
