[workspace]
resolver = "2"
members = [
    "example_crypto",
    "example_parsing",
]

[profile.bench]
debug = true

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
criterion = "0.5"
nom = "7"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"