[workspace]
resolver = "2"
members = [
    "examples_common",
    "example_crypto",
    "example_parsing",
    "example_watchexec",
]

[profile.bench]
debug = true

[workspace.dependencies]
anyhow = "1"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
clap = { version = "4", features = ["derive"] }
criterion = "0.5"
futures = "0.3"
hex = "0.4"
inotify = "0.10"
nom = "7"
parking_lot = "0.12"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
watchexec = "3"
watchexec-events = "2"
watchexec-signals = "2"
