[package]
name = "example_crypto"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "keygen"
harness = false

[[bench]]
name = "rand"
harness = false

[[bench]]
name = "sign"
harness = false

[[example]]
name = "client_ca"
path = "examples/client_ca.rs"

[[example]]
name = "client_ca_p12"
path = "examples/client_ca_p12.rs"

[[example]]
name = "openssl_sequoia"
path = "examples/openssl_sequoia.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
hex.workspace = true
openssl = { version = "0.10", features = ["vendored"] }
rand.workspace = true
sequoia-openpgp = "1"
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
criterion.workspace = true