[package]
name = "example_vfs"
version = "0.1.0"
edition = "2024"

[[example]]
name = "basic"
path = "examples/basic.rs"

[dependencies]
anyhow = "1"
futures = "0.3"
hex.workspace = true
sha2 = "0.10.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
vfs = { version = "0.12", features = ["async-vfs", "embedded-fs"] }
